# oceanpy

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  __init__.py  animations.py  environment.yml  kinematics.py  pyproject.toml  requirements.txt
docs/source/: conf.py  documented_examples.rst  examples.rst  index.rst  models.rst  observations.rst  requirements.txt
docs/source/examples/: example-gradient-wind.ipynb
docs/source/pages/: observations.rst
examples/: gradient-wind-example.ipynb
models/: __init__.py  gcm.py  grid.py  meteorology.py  navier_stokes.py  qgvb.py  velocity.py
obs/: __init__.py  ctd.py  grid.py  omega.py  satellite.py  satgem.py  velocity.py
plot/: animations.py
src/: kinematics.py  netcdf.py  projections.py
tools/: __init__.py  contour.py  netcdf.py  projections.py  utilities.py
