[project]
name = "oceanpy"
version = "0.0.1"
description = "Python package for Oceanography"
license_file = "LICENSE"
authors = [{name="Jan Jaap Meijer", email="janjaapmeijer@gmail.com"},]
repository = "https://github.com/janjaapmeijer/oceanpy"
documentation = "oceanpy.readthedocs.io"

[tool.setuptools.packages.find]
where = ["models", "obs", "plot", "stats", "tools"]

[build-system]
requires = ["setuptools", "numpy", "pyproj", "netCDF4", "scipy", "gsw", "xarray", "dask", "xgcm", "scikit-image", "ffmpeg", "sphinx", "nbsphinx", "pandoc"]
  # - nbconvert
  # - ipykernel
