[project]
name = "oceanpy"
version = "0.0.1"
description = "Python package for Oceanography"
authors = [{name="Jan Jaap Meijer", email="janjaapmeijer@gmail.com"},]
# license = "Apache-2.0"
# repository = "https://github.com/janjaapmeijer/oceanpy"
# documentation = "oceanpy.readthedocs.io"

[tool.setuptools.packages.find]
where = ["models", "obs", "plot", "stats", "tools"]

[build-system]
requires = ["setuptools", "wheel", "numpy", "pyproj", "netCDF4", "scipy", "gsw", "xarray", "dask", "xgcm", "scikit-image", "ffmpeg", "sphinx", "nbsphinx", "pandoc"]
  # - nbconvert
  # - ipykernel
